# telemetry-ingestor-rs

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
db/: init.sql
src/: app.rs  config.rs  main.rs
src/db/: postgres.rs
src/middleware/: auth.rs
src/models/: telemetry.rs
src/routes/: health.rs  mod.rs  telemetry.rs
tests/: README.md  forbidden.sh  health.sh  ok_mixed.sh  ok_zero_valid.sh  run-all.sh  unauthorized.sh
