[package]
name = "telemetry-ingestor-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "time", "uuid", "chrono"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
tower = "0.5"
tower-http = { version = "0.5", features = ["trace"] }
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
lto = true
codegen-units = 1
